# omni-scripts

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  flake.nix
.github/workflows/: ci.yml
bash/: local-git-branch-cleanup.sh
bash/utils/: ansi.bats  ansi.sh  path.bats  user-interaction.bats.sh  user-interaction.sh
docs/: FORMATTING_TOOLS.md
nix/: default.nix
nix/pkgs/: default.nix
nix/pkgs/local-git-branch-cleanup/: default.nix  tui.nix
nix/shells/: default.nix  pre-commit.nix
pkgs/local-git-branch-cleanup/: default.nix  tui.nix
rust/: ARCHITECTURE.md  Cargo.toml  MIGRATION.md  README.md  TESTING.md
rust/local-git-branch-cleanup-tui/: Cargo.toml  README.md  TUI_USAGE_GUIDE.md
rust/local-git-branch-cleanup-tui/docs/: ISSUES_AND_FEATURES.md  QA_ISSUES.md  README.md
rust/local-git-branch-cleanup-tui/docs/guides/: MIGRATION.md  TUI_USAGE_GUIDE.md
rust/local-git-branch-cleanup-tui/docs/specs/: ARCHITECTURE.md  GITHUB_PR_CACHE.md  ROADMAP.md  SEARCH_FEATURE.md
rust/local-git-branch-cleanup-tui/docs/testing/: TESTING.md  TEST_SUMMARY.md
rust/local-git-branch-cleanup-tui/specs/: TESTING.md  TEST_SUMMARY.md  branch-cleanup-tui-roadmap.md
rust/local-git-branch-cleanup-tui/src/: app.rs  cache.rs  git.rs  main.rs  ui.rs  ui.rs.bak
rust/local-git-branch-cleanup-tui/tests/: integration_test.rs
rust/omni-lib/: Cargo.toml
rust/omni-lib/src/: lib.rs
rust/src/: app.rs  git.rs  main.rs  ui.rs
rust/tests/: integration_test.rs
specs/: branch-cleanup-tui-roadmap.md
