[workspace]
members = [
    "omni-lib",
    "local-git-branch-cleanup-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Emil Ivanichkov"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
chrono = { version = "0.4.43", features = ["clock"] }
clap = { version = "4.5.57", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["all-widgets"] }

rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"

# Testing dependencies
tempfile = "3.17"
assert_cmd = "2.0"
predicates = "3.1"

# Internal crates
omni-lib = { path = "omni-lib" }
